--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Quench</title>
+    <title>Moss</title>
     <link rel="stylesheet" href="/style.css" />
     <script type="module" src="/script.js"></script>
   </head>
@@ -35,7 +35,7 @@
       SOFTWARE.
     -->
     <a
-      href="https://github.com/quench-lang/quench"
+      href="https://github.com/moss-lang/moss"
       class="github-corner"
       aria-label="View source on GitHub"
       ><svg
