--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 });</script>
 
     <meta charset="utf-8" />
-    <title>Quench</title>
+    <title>Moss</title>
     
     
-    <script type="module" crossorigin src="/assets/index.9c0f5560.js"></script>
+    <script type="module" crossorigin src="/assets/index.28c1f34d.js"></script>
     <link rel="stylesheet" href="/assets/index.6a0c81cc.css">
   </head>
   <body>
@@ -67,7 +67,7 @@
       SOFTWARE.
     -->
     <a
-      href="https://github.com/quench-lang/quench"
+      href="https://github.com/moss-lang/moss"
       class="github-corner"
       aria-label="View source on GitHub"
       ><svg
