Bring LSP to the website

--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -7,8 +7,7 @@
     <script type="module" src="/script.js"></script>
   </head>
   <body>
-    <div id="code" class="editor"></div>
-    <div id="ast" class="editor"></div>
+    <div id="container"></div>
 
     <!-- https://github.com/tholman/github-corners/tree/786d845dbea7f36c1e6c82c59b30dfa4d2d31f23 -->
     <!--
