deploy: 88190fe78ef45cb2f6bd40d4ce21fafe866ee972

--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
     <title>Moss</title>
     
     
-    <script type="module" crossorigin src="/assets/index.28c1f34d.js"></script>
-    <link rel="stylesheet" href="/assets/index.6a0c81cc.css">
+    <script type="module" crossorigin src="/assets/index.2f59a73d.js"></script>
+    <link rel="stylesheet" href="/assets/index.a6be3a2f.css">
   </head>
   <body>
-    <div id="code" class="editor"></div>
-    <div id="ast" class="editor"></div>
+    <div id="container"></div>
 
     <!-- https://github.com/tholman/github-corners/tree/786d845dbea7f36c1e6c82c59b30dfa4d2d31f23 -->
     <!--
